Presets and Other QOL
Implemented Preset exporting and importing for some stuff.
Added a scroll check for the Mod Downloader to load mods more seamlessly as you're nearing the bottom.

--- a/WinFormsApp1/SPTLauncher.csproj
+++ b/WinFormsApp1/SPTLauncher.csproj
@@ -6,6 +6,8 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <AssemblyVersion>1.0.0.2</AssemblyVersion>
+    <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -54,10 +56,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Components\QuestManagement\" />
   </ItemGroup>
 
 </Project>
