--- a/WinFormsApp1/SPTLauncher.csproj
+++ b/WinFormsApp1/SPTLauncher.csproj
@@ -58,4 +58,8 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\ModManagement\Installer\" />
+  </ItemGroup>
+
 </Project>
